metaball viewport checkbox crash #56360

Closed
opened 2018-08-13 21:43:43 +02:00 by jerome tailhades · 11 comments

System Information
Linux manjaro i7 3770, nvidia gtx 1070

Blender Version
version: 2.80 (sub 21), branch: blender2.8, commit date: 2018-08-13 14:53, hash: 0e8bd6ba8a, type: Release
build date: 2018-08-13, 15:04:09

Short description of error
blender crashes when use any of the checkbox of viewport display panel

Exact steps for others to reproduce the error

  • create some metaball
  • enable checkbox in viewport display panel
**System Information** Linux manjaro i7 3770, nvidia gtx 1070 **Blender Version** version: 2.80 (sub 21), branch: blender2.8, commit date: 2018-08-13 14:53, hash: 0e8bd6ba8a2, type: Release build date: 2018-08-13, 15:04:09 **Short description of error** blender crashes when use any of the checkbox of viewport display panel **Exact steps for others to reproduce the error** - create some metaball - enable checkbox in viewport display panel

Added subscriber: @JeromeTailhades

Added subscriber: @JeromeTailhades

Added subscriber: @mont29

Added subscriber: @mont29

Cannot confirm that, please:

  • Give us your exact Blender, OS and GPU (including drivers) versions, as requested in the template!
  • Ensure both your OS and drivers are fully up-to-date (and use official GPU drivers, not those provided by windows or tablet/laptop maker or open source ones in linux distributions).
  • Try to start Blender in factory settings (--factory-startup commandline option) (this will ensure whether this is a userpref or addon issue or not).
  • Try to tweak OGL settings in UserPreferences, System tab.
  • Try to tweak your GPU driver settings (e.g. try different values between 'performance' and 'quality' if you have such slider, etc.).
  • Attach as text file here the report generated by Help -> System Info (do not paste it directly in comment).
  • Launch Blender from the command line with --debug-gpu option and attach as text file here any error printed out in the console (do not paste it directly in comment).
  • Try to start in software OpenGL mode (use the blender-softwaregl distributed with official blender, will be slow, but will show whether this is a driver issue or not).
Cannot confirm that, please: * Give us your exact Blender, OS and GPU (including drivers) versions, as requested in the template! * Ensure both your OS and drivers are fully up-to-date (and use official GPU drivers, not those provided by windows or tablet/laptop maker or open source ones in linux distributions). * Try to start Blender in factory settings (`--factory-startup` commandline option) (this will ensure whether this is a userpref or addon issue or not). * Try to tweak OGL settings in UserPreferences, System tab. * Try to tweak your GPU driver settings (e.g. try different values between 'performance' and 'quality' if you have such slider, etc.). * **Attach as text file** here the report generated by Help -> System Info (**do not** paste it directly in comment). * Launch Blender from the command line with `--debug-gpu` option and **attach as text file** here any error printed out in the console (**do not** paste it directly in comment). * Try to start in software OpenGL mode (use the `blender-softwaregl` distributed with official blender, will be slow, but will show whether this is a driver issue or not).
  • OS : Linux-x86_64 manjaro (arch base), Blender : see report, GPU nvidia GTX1070 with nvidia driver 390.77 (last)
  • the system is uptodate
  • --factory-startup : crash again
  • ogl tweak : ?
  • tweak GPU settings : done, i have the performance slider. All positions crash
  • system-info.txt
    blender.crash.txt
  • blender-softwaregl : console replay : Warning! GLX_ARB_create_context not available.
- OS : Linux-x86_64 manjaro (arch base), Blender : see report, GPU nvidia GTX1070 with nvidia driver 390.77 (last) - the system is uptodate - --factory-startup : crash again - ogl tweak : ? - tweak GPU settings : done, i have the performance slider. All positions crash - [system-info.txt](https://archive.blender.org/developer/F4223434/system-info.txt) [blender.crash.txt](https://archive.blender.org/developer/F4223440/blender.crash.txt) - blender-softwaregl : console replay : Warning! GLX_ARB_create_context not available.

Still cannot reproduce… also not sure about what you call 'viewport display panel'? We don’t have that anymore, only overlays and shading settings…

Still cannot reproduce… also not sure about what you call 'viewport display panel'? We don’t have that anymore, only overlays and shading settings…

Added subscriber: @zeauro

Added subscriber: @zeauro

We have a Viewport Display panel under Object tab of properties editor.

In attached.blend, click any display option (name, axis, etc... ) of a metaball to produce a crash.
Metaball_display_options.blend

We have a Viewport Display panel under Object tab of properties editor. In attached.blend, click any display option (name, axis, etc... ) of a metaball to produce a crash. [Metaball_display_options.blend](https://archive.blender.org/developer/F4355691/Metaball_display_options.blend)

the "viewport display" is in object properties. It allow to set the display (Name, Axis, Wireframe, etc.) for the active object.

I had test with overlays enabled et disabled. I also test as root.

I use the last blender-2.80:
version: 2.80 (sub 21), branch: blender2.8, commit date: 2018-08-23 06:46, hash: 01973290a9, type: Release
build date: 2018-08-23, 09:24:16

the "viewport display" is in object properties. It allow to set the display (Name, Axis, Wireframe, etc.) for the active object. I had test with overlays enabled et disabled. I also test as root. I use the last blender-2.80: version: 2.80 (sub 21), branch: blender2.8, commit date: 2018-08-23 06:46, hash: 01973290a9f, type: Release build date: 2018-08-23, 09:24:16
Bastien Montagne self-assigned this 2018-08-23 21:26:02 +02:00

… Hence the 'precise steps to reproduce the issue' request…

Thanks, confirmed.

… Hence the 'precise steps to reproduce the issue' request… Thanks, confirmed.

This issue was referenced by a6b65c75cd

This issue was referenced by a6b65c75cd2d08afb0bc9543e0528ac583b720a3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56360
No description provided.