Fix T56360: metaball viewport checkbox crash.

Do same as for other geometry types to compute bbox, instead of blindly
returning NULL `ob->bb`...